--- a/private/welcome_mail.html
+++ b/private/welcome_mail.html
@@ -1,14 +1,17 @@
 Hey, {{name}}!<br />
-Ted from Akademiska Roddföreningenhere.<br /><br />
+Ted from Akademiska Roddföreningen here.<br /><br />
 
-I'm happy to inform that our new rowing system has just launched. Your account has been made as well & you're ready to log these brutal rowing session in new digital form.<br /><br />
+I'm happy to inform that our new rowing system has launched. Your account has justbeen made & you're ready to log these awesome rowing session in new digital form.<br /><br />
 
 <bold>Your temporary username:</bold> {{tempUsername}} <br />
 <bold>Password:</bold> {{tempPassword}}<br /><br />
 
 Please log in to rowbook.herokuapp.com and change your username & password to anything that suits you.<br />
-Don't hesitate to ask me any questions (this mail / facebook / in person :)<br /><br />
+Don't hesitate to ask me any questions (by responding to this mail / facebook / in person :)<br /><br />
 
-Hope you will like it,<br />
-Have a nice day,<br />
+Hope you will enjoy,<br />
+have a nice day,<br />
 Ted
+
+PS
+Rowbook is at v1.0 now, but it doesn't mean it's going to stop there. Among polishing (sic!), feautures like proper visualization of your rowing adventure & fitness progress, synchronization with our beloved ergs & on the water logging will be dropping in.
